feat: finalizando a criacao e ajustes dos testes unitarios e de integracao